--- a/Длительность-установки-сборок.html
+++ b/Длительность-установки-сборок.html
@@ -113,7 +113,8 @@
       </div></header>
     <section class="u-clearfix u-grey-90 u-section-1" id="sec-6f8f">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h3 class="u-align-center u-text u-text-1">Тут будет информация о длительности установки сборок от Аддерли На SSD и HDD!</h3>
+        <h3 class="u-align-center u-text u-text-1">Тут будет информация о длительности установки сборок от Аддерли На SSD и 2 HDD!<br>Длительность может не совпадать с вашими подсчетами.<br>Все проверено на комплектующих, написанные ниже:
+        </h3>
         <p class="u-align-center u-text u-text-2">Комплектующие двух ноутбуков:</p>
         <p class="u-align-center u-text u-text-3">Ноутбук автора сборок:</p>
         <p class="u-align-center u-text u-text-4">Процессор: Intel Core i5 2540M 3.30 Ггц<br>ОЗУ: 12 GB DDR3 1333 МГц<br>SSD SATA 3 (240 GB) -&nbsp;KINGSTON SA400S37240G<br>HDD SATA 2&nbsp;7200 RPM (500 GB) -&nbsp;HGST HTS725050A7E630<br>Проверятся будут на обоих дисках
@@ -121,8 +122,13 @@
         <p class="u-align-center u-text u-text-5">Второй слабенький ноутбук:</p>
         <p class="u-align-center u-text u-text-6">Процессор: Intel Pentium T3400 2.17 Ггц<br>ОЗУ: 2 GB DD2 800 МГц<br>HDD 120 GB (Скорость неизвестна)
         </p>
-        <h1 class="u-align-center u-text u-text-7">Длительность установки на SSD:</h1>
-        <h4 class="u-align-center u-text u-text-8"> Длительность установки Windows 11 V2 by Adderly на SSD - 12 Минут<br>Длительность установки Windows 10 21H2 by Adderly на SSD - 20 Минут<br>Длительность установки Windows 10 1709 by Adderly на SSD - 16 Минут<br>Длительность установки Windows 10 1607 by Adderly на SSD - 18 Минут<br>
+        <h1 class="u-align-center u-text u-text-7">Длительность установки на SSD:<br>(с помощью эмуляции)
+        </h1>
+        <h4 class="u-align-center u-text u-text-8"> Длительность установки Windows 11 V2 by Adderly на SSD - 12 ​Мин.<br>Длительность установки Windows 10 21H2 by Adderly на SSD - 20 ​Мин.<br>Длительность установки Windows 10 1709 by Adderly на SSD - 16 ​Мин.<br>Длительность установки Windows 10 1607 by Adderly на SSD - 18 ​Мин.<br>Длительность установки Windows 8.1 by Adderly на SSD - 17 ​Мин.<br>Длительности установки Windows 8.1 Lite x32 by Adderly на SSD - 11 ​Мин.<br>Длительности установки Windows 8.0  by Adderly на SSD - 14 ​Мин.<br>Длительности установки Windows 7  by Adderly на SSD - 16 ​Мин.<br>
+        </h4>
+        <h1 class="u-align-center u-text u-text-9">Длительность установки на SSD:<br>(с помощью флешки)
+        </h1>
+        <h4 class="u-align-center u-text u-text-10"> Длительность установки Windows 11 V2 by Adderly на SSD - 7 ​Мин.<br>Длительность установки Windows 10 21H2 by Adderly на SSD - 12 ​Мин.<br>Длительность установки Windows 10 1709 by Adderly на SSD - 9 ​Мин.<br>Длительность установки Windows 10 1607 by Adderly на SSD - 10 ​Мин.<br>Длительность установки Windows 8.1 by Adderly на SSD - 8 ​Мин.<br>Длительности установки Windows 8.1 Lite x32 by Adderly на SSD - 8 Мин.<br> Длительности установки Windows 8.0  by Adderly на SSD - 6 ​Мин.<br>Длительности установки Windows 7  by Adderly на SSD - 9 Мин.<br>
         </h4>
       </div>
     </section>
